--- a/Website/templates/editor.html
+++ b/Website/templates/editor.html
@@ -29,16 +29,7 @@
                     <div class="shot-number">Shot 001</div>
                     <div class="shot-desc">Wide shot - Character enters room</div>
                 </div>
-                <div class="shot-item">
-                    <div class="shot-number">Shot 002</div>
-                    <div class="shot-desc">Close-up - Reaction to discovery</div>
-                </div>
-                <div class="shot-item">
-                    <div class="shot-number">Shot 003</div>
-                    <div class="shot-desc">Medium shot - Walking to window</div>
-                </div>
             </div>
-            <button class="add-shot-btn">+ ADD SHOT</button>
         </div>
 
         <!-- Center - Preview Area -->
@@ -46,7 +37,7 @@
             <div class="preview-container">
                 <div class="preview-placeholder">
                     <div class="preview-placeholder-icon">🎬</div>
-                    <p>Generate your first shot</p>
+                    <img class="preview-image" src="{{ image_url }}" alt="generated image">
                 </div>
             </div>
             <div class="preview-controls">
