--- a/Website/templates/base.html
+++ b/Website/templates/base.html
@@ -84,8 +84,9 @@
                 </div>
                 <div class="upload-zone">
                     <form method="post" action="{{ url_for('views.editor') }}">
+                        <input type="hidden" name="action" value="generate">
                         <label for="query"></label><input type="text" class = "form-control" id = "query" name = "query" placeholder = "Enter scene:" style = "font-size: 15pt; width: 500px">
-                        <button class="cta-button" type="submit">Create Shot</button>
+                        <button class="cta-button" type="submit" value="generate">Create Shot</button>
                     </form>
                     <p style="color: #666; font-size: 14px;">Describe your shot or upload reference</p>
                 </div>
